--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_Input.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_Input.cshtml
@@ -2178,7 +2178,23 @@
         submitHandler: function (form) {
 
             setHiddenField();
-
+            //var id=document.getElementById('CaseSolution_Id').value;            
+            //if (id==0)
+            //{
+            //    var form = $("#target").serialize();
+            //    $.ajax({
+            //        type: 'POST',
+            //        url: "/CaseSolution/NewAndEdit",
+            //        data: form,
+            //        success: function (data) {
+                   
+            //            $('#divReplaceConditions').html($(data));
+            //        },
+            //        error: function (result) {
+                   
+            //        }
+            //    });
+            //}
             form.submit();
         }
     });
@@ -2313,6 +2329,7 @@
         }
         var h=document.getElementById('selectedValues');
         h.value=final;
+        
     }
 
     //function DropDownChange(v)
