--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Contracts/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Contracts/Index.cshtml
@@ -74,7 +74,7 @@
                                             </tr>
                                             <tr style="border-style:solid;border-width:thin;border-color:#E0E0E0">
                                                 <td style="border-style:solid;border-width:thin;border-color:#E0E0E0;padding-left:5px">
-                                                    Antal:
+                                                    Antal
                                                 </td>
 
                                                 <td style="border-style:solid;border-width:thin;text-align:right; width:100px;border-color:#E0E0E0;padding-right:5px">
@@ -83,7 +83,7 @@
                                             </tr>
                                             <tr style="border-style:solid;border-width:thin;border-color:#E0E0E0">
                                                 <td style="border-style:solid;border-width:thin;padding-right:100px;border-color:#E0E0E0;padding-left:5px">
-                                                    Pågående:
+                                                    Pågående
                                                 </td>
 
                                                 <td style="border-style:solid;border-width:thin;text-align:right;border-color:#E0E0E0;padding-right:5px">
@@ -92,7 +92,7 @@
                                             </tr>
                                             <tr style="border-style:solid;border-width:thin;border-color:#E0E0E0">
                                                 <td style="border-style:solid;border-width:thin;border-color:#E0E0E0;padding-left:5px">
-                                                    Avslutade:
+                                                    Avslutade
                                                 </td>
 
                                                 <td style="border-style:solid;border-width:thin;text-align:right;border-color:#E0E0E0;padding-right:5px">
@@ -101,7 +101,7 @@
                                             </tr>
                                             <tr style="border-style:solid;border-width:thin;border-color:#E0E0E0">
                                                 <td style="border-style:solid;border-width:thin;border-color:#E0E0E0;padding-left:5px">
-                                                    <span style="color:red">För uppsägning:</span>
+                                                    <span style="color:red">För uppsägning</span>
                                                 </td>
 
                                                 <td style="border-style:solid;border-width:thin;text-align:right;border-color:#E0E0E0;padding-right:5px">
@@ -110,7 +110,7 @@
                                             </tr>
                                             <tr style="border-style:solid;border-width:thin;border-color:#E0E0E0">
                                                 <td style="border-style:solid;border-width:thin;border-color:#E0E0E0;padding-left:5px">
-                                                    <span style="color:#FF8000"> För uppföljning:</span>
+                                                    <span style="color:#FF8000"> För uppföljning</span>
                                                 </td>
 
                                                 <td style="border-style:solid;border-width:thin;text-align:right;border-color:#E0E0E0;padding-right:5px">
@@ -119,7 +119,7 @@
                                             </tr>
                                             <tr style="border-style:solid;border-width:thin;border-color:#E0E0E0">
                                                 <td style="border-style:solid;border-width:thin;border-color:#E0E0E0;padding-left:5px">
-                                                    <span style="color:#009900">Löpande:</span>
+                                                    <span style="color:#009900">Löpande</span>
                                                 </td>
 
                                                 <td style="border-style:solid;border-width:thin;text-align:right;border-color:#E0E0E0;padding-right:5px">
