[ADD] Add Attachment tab to Case and a setting in Customer

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseFiles.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseFiles.cshtml
@@ -4,7 +4,7 @@
 @if (Model != null && Model.Files != null && Model.Files.Any())
 {    
 
-    <table id="case_files_table" class="table table-striped">
+    <table id="case_files_table" class="table table-striped" style="margin-top:10px;">
         <thead>
             <tr>
                 <th>
